finish register implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="addbutt">addButt</string>
 
 
+    <string name="registerbtn">Register</string>
+    <string name="confirmPassword">Confirm password</string>
+
+
+
+
 </resources>
