finish login screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,12 @@
     <string name="password_hint">Password</string>
     <string name="addbutt">addButt</string>
 
-
+    <string name="web_client">541607280272-ici76tipfj9bu9sh9brq33cd4qda9jls.apps.googleusercontent.com</string>
     <string name="registerbtn">Register</string>
     <string name="confirmPassword">Confirm password</string>
-
-
+    <string name="btn_login_text">Login</string>
+    <string name="forgetPassword">Forgetting password</string>
+    <string name="send_email">Send Email</string>
 
 
 </resources>
