adding work manager+ handel sending request

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,7 @@
     <string name="added_by_azza">added by Azza</string>
     <string name="azza_helmy">Azza Helmy</string>
     <string name="is_invited_you_to_take_care_of_her">is invited you to take care of her</string>
+    <string name="ok_text">ok</string>
+    <string name="ok">okk</string>
+    <string name="healthtakers">HealthTakers</string>
 </resources>
